Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <li>15:00 - 🖼️ Conhecer o MASP</li>
         <li>16:30 - 🏨 Check-in no Hotel Charlie Sintra Jardins</li>
         <li>20:00 - 🍽️ Jantar romântico no Sal Gastronomia</li>
-        <li>22:00 - 🍷 Aproveitar o quarto</li>
+        <li>22:00 - 🍷 "Aproveitar" o quarto a noite toda 😍</li>
       </ul>
       <p>Espero por você! 💌</p>
     </div>
